** (2013-07-08) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Handle cve data file open failures correctly

** (2013-02-04) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add fix for cpe:language when additional ':' was provided (Thanks to
	  Arnaud Fileux)

** (2012-11-25) Release 3.2

** (2012-11-25) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Fix declarations for dummy database handlers wrt cvss scoring

** (2012-05-13) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Use memset in zero_string
	- Clean up buffers before reusing (suggestion by Francesco Colista)

** (2012-04-20) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add check on xsltproc (reported by Scott Garman)

** (2012-01-22) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add CVSS scoring information to the report

** (2011-07-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update buffer size checks

** (2011-04-13) Release 3.1

** (2011-04-11) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Sanitize hostname/userdefkey in MySQL implementation
	- Fix weird bug when both sqlite and mysql support is requested

** (2011-04-11) Release 3.0

** (2011-04-11) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Fix reporting on existing entries in the database
	- Fix reporting on software installation (header mismatch)
	- Fix cpepart error in reporting (MySQL)
	- Update documentation and manual pages
	- Update MySQL to InnoDB and use foreign keys for referential
	  integrity

** (2011-04-10) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Improve CVE loadtime
	- Enhance pullcves to deduce dates rather than hardcode them
	- Updates on documentation and manual pages

** (2011-04-01) Sven Vermeulen <sven.vermeulen@siphos.be>
	- More MySQL support

** (2011-04-01) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Pull up fieldsize from 64 to 128 characters
	- Make sizes a bit more manageable
	- Drop some dead code

** (2011-03-24) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Start framework to support MySQL
